UPDATE: Pushed instructional block down 80px

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,6 +4,10 @@
     background-repeat: no-repeat;
   }
   
+  #instructions {
+    margin-top: 80px;
+  }
+  
   #map {
     margin-top: 20px;
     margin-left: 25px;
